simplicite/service-for-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simplicite
  labels:
    app: simplicite
spec:
  selector:
    app: simplicite
  type: NodePort
  ports:
  - name: simplicite-http
    port: 8080
    targetPort: 8080
  - name: simplicite-https
    port: 8443
    targetPort: 8443
