simplicite/ingress.yml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "simplicite-ingress"
spec:
  backend:
    serviceName: "simplicite"
    # for HTTP
    servicePort: 8080
    # for HTTPS
    #servicePort: 8443
